# sensei

./: .editorconfig  .env.example  .gcloudignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  Procfile  README.md  alembic.ini  biome.json  docker-compose.yml  fly.toml  logo.txt  package-lock.json  package.json  pyproject.toml  tome-seeds.txt  tsconfig.base.json  tsconfig.json  turbo.json
.beads/: issues.jsonl  metadata.json
.claude/: settings.json  settings.local.json
.claude-plugin/: marketplace.json
alembic/versions/: 002_add_documents_fts.py  003_section_based_storage.py
docs/execplans/: 2025-12-17-opencode-plugin-execplan.md  2025-12-21-simplified-database-lifecycle-execplan.md
docs/plans/: 2025-01-21-simplified-database-lifecycle.md  2025-11-15-crawlee-httpcrawler-error-handling.md  2025-12-01-tome-section-based-storage.md  2025-12-17-opencode-plugin-design.md  2025-12-18-codebase-understanding-design.md  2025-12-18-dspy-sequential-optimizer.py  2025-12-18-dspy-wrapper-sketch.py  2025-12-18-eval-improvement-loop-design.md
scripts/: build_plugin.py  dump_full_request.py  ingest.py  mock_agent.py  mock_mcp_server.py  probe_agent_hang.py  run_query.py  sync_versions.py  test_pydantic_evals_spans.py
sensei/: __init__.py  __main__.py  agent.py  build.py  config.py  core.py  deps.py  paths.py  prompts.py  sentry.py  server.py  settings.py  types.py  unified.py
sensei/api/: __init__.py  __main__.py
sensei/database/: engine.py  local.py  models.py  storage.py
sensei/dojo/: README.md
sensei/eval/: task.py
sensei/kura/: __init__.py  __main__.py  server.py  tools.py
sensei/migrations/: env.py
sensei/scout/: __init__.py  __main__.py  manager.py  models.py  operations.py  repomap.py  server.py
sensei/server/: __init__.py  api.py  mcp.py  models.py
sensei/tome/: __init__.py  __main__.py  chunker.py  crawler.py  parser.py  server.py  service.py
sensei/tools/: cache.py  common.py  context7.py  exec_plan.py  grep.py  httpx.py  kura.py  scout.py  sub_agent.py  tavily.py  tome.py
tests/: conftest.py  test_api.py  test_cache.py  test_cache_integration.py  test_database.py  test_mcp.py  test_paths.py  test_scout.py  test_tome_chunker.py  test_tome_parser.py  test_tome_service.py  test_tools.py
(+5 files in other folders)
